Remove CDN S3 endpoint

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ permissions and limitations under the License.
     };
 
     // Initialize S3 SDK and the moment library (for time formatting utilities)
-    var endpoint = 'ams3.cdn.digitaloceanspaces.com'
+    var endpoint = 'ams3.digitaloceanspaces.com'
     var s3 = new AWS.S3({ endpoint: endpoint });
     moment().format();
 
